<resources>
    <string name="app_name">ariadi</string>
    <string name="daftarras">Daftar Ras Hewan</string>
    <string name="pri00">Primata</string>
    <string name="el00">Elang</string>
    <string name="hiu00">Hiu</string>
    <string name="ket">(Tekan gambar hewan untuk membuka galeri)</string>
    <string name="pri1">Orangutan Sumatra</string>
    <string name="pen1">Hewan yang memakan buah-buahan seperti mangga, nangka, durian serta leci. Selain itu, Orangutan Sumatera juga memakan telur dan vertebrata kecil.</string>
    <string name="pri2">Simakobu atau Pig-tailed Langur</string>
    <string name="asal2">Kepulauan Mentawai</string>
    <string name="pen2">Simakobu adalah salah satu keluarga kera. Populasinya yakni 6.700–17.300 ekor (IUCN, 2006). Simakobu saat ini statusnya adalah sebagai hewan langka.</string>
    <string name="pri3">Monyet Hitam Sulawesi atau yaki</string>
    <string name="pen3">Yaki atau monyet wolai atau monyet hitam Sulawesi (Macaca nigra)/monyet pantat merah adalah satwa endemik Indonesia yang hanya terdapat di Pulau Sulawesi bagian utara dan beberapa pulau di sekitarnya, yakni di Hutan Tangkoko Bitung</string>
    <string name="pri4">Bekantan</string>
    <string name="asal4">Kalimantan</string>
    <string name="pen4">Bekantan adalah monyet yang memiliki hidung panjang dan hewan yang mengonsumsi biji-bijian dan buah-buahan. Ia juga bisa makan daun yang dapat menghasilkan gas ketika dicerna.</string>
    <string name="pri5">Beruk Mentawai</string>
    <string name="asal5">Kepulauan Mentawai</string>
    <string name="pen5">Orang lokal menyebutnya Bokoi atau bokkoi (Macaca pagensis). Mereka adalah sejenis monyet yang menyebar terbatas (endemik) di Kepulauan Mentawai, lepas pantai barat Sumatera.</string>
    <string name="el1">Elang Hitam</string>
    <string name="as1">Asia tropis</string>
    <string name="penj1">Black eagle ialah spesies elang dengan kekuatan pertahanan besar dan tersebar bermacam daerah ketinggian tiga ratus hingga dua ribu mdpl, Karakteristik spesial black eagle dilihat dari sayapnya yang nampak menjari, lebar serta kuat.</string>
    <string name="el2">Elang Brontok</string>
    <string name="as2">Sumatra, Kalimantan, Jawa, Bali dan Nusa Tenggara</string>
    <string name="penj2">Elang brontok adalah sejenis burung pemangsa anggota suku Accipitridae. Dinamai demikian kemungkinan karena warnanya yang berbercak-bercak (pada bentuk yang berwarna terang).</string>
    <string name="el3">Elang Jawa</string>
    <string name="as3">Jawa</string>
    <string name="penj3">Burung elang jawa tersebut tinggal di zona pedalaman serta sekunder pada tinggi 3 ratus di atas permukaan laut.</string>
    <string name="el4">Elang Ular Bido</string>
    <string name="penj4">Dikenal juga sebagai Crested Serpent Eagle atau CSE oleh sebagian pecinta burung pemangsa (BOP)</string>
    <string name="el5">Elang Ular Jari Pendek</string>
    <string name="as5">Pengembara</string>
    <string name="penj5">Hewan Elang ular jari pendek ialah hewan besar dengan suatu dimensi 65 centimeter. Badannya yang perkasa dengan suatu warna bulu putih. Hewan tersebut sangat tidak sering buat nampak.</string>
    <string name="h1">Hiu Goblin</string>
    <string name="fr1">Indo-Pasifik dan Oceania</string>
    <string name="p1">Dilihat dari penampilannya saja, hiu yang satu ini sudah terlihat mengerikan. Bagaimana tidak, ia memiliki tanduk di dahinya, tak seperti hiu pada umumnya.</string>
    <string name="h2">Hiu Great White Shark</string>
    <string name="fr2">pesisir perairan di seluruh permukaan lautan utama</string>
    <string name="p2">Great White Shark adalah hiu pemakan daging terbesar di dunia. Para betinanya bisa tumbuh hingga enam meter, sedangkan hiu jantan bisa tumbuh hingga empat meter. Mereka bisa ditemukan di seluruh samudra, tetapi lebih banyak menempati wilayah yang hangat.</string>
    <string name="h3">Hiu banteng</string>
    <string name="fr3">Amerika Utara hingga Selatan</string>
    <string name="p3">Hiu banteng memiliki tubuh yang relatif kecil, yaitu berkisar antara dua hingga tiga meter saja. Namun jangan remehkan mereka. Hiu banteng sering kali disebut sebagai hiu paling berbahaya di dunia.</string>
    <string name="h4">Hiu harimau</string>
    <string name="fr4">Perairan Samudera Hindia.</string>
    <string name="p4">\"Hiu harimau memiliki reputasi sebagai pemakan manusia. Mereka adalah hiu paling berbahaya kedua setelah hiu banteng. Tubuhnya cukup besar karena bisa tumbuh hingga sepanjang lima meter. \"</string>
    <string name="h5">Hiu martil</string>
    <string name="fr5">Samudera Hindia sebelah selatan Jawa dan Nusa Tenggara.</string>
    <string name="p5">Hiu martil terkenal karena bentuk kepalanya yang unik. Mereka juga tergolong cukup besar karena bisa tumbuh hingga sepanjang enam meter.</string>
    <string name="hewanpedia">HewanPedia</string>
    <string name="jenis_jenis">Jenis-Jenis</string>
    <string name="name_Elang">Berbagai Jenis Elang</string>
    <string name="name_Hiu">Berbagai Jenis Hiu</string>
    <string name="name_primata">Berbagai Jenis Primata</string>
    <string name="tt">Tentang Pembuat</string>
</resources>